# Poker

./: .gitignore  Makefile  README.md  aa.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
api/: __init__.py  dependencies.py  main.py
api/endpoints/: __init__.py  evaluate.py  health.py  predict.py
api/middleware/: __init__.py
configs/: config.yaml  deployment_config.yaml  evaluation_config.yaml  llm_config.yaml  model_config.yaml  rl_config.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: compare_agents.py  eda.py  evaluate_model.py  export_model.py  parse_jsonl_to_csv.py  preprocess_data.py  run_self_play.py  train_rl.py  train_supervised.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  llm_agent.py  mixture_agent.py  policy_agent.py  rule_agent.py
src/data/: __init__.py  dataset.py  features.py  jsonl_parser.py  loader.py  preprocess.py
src/environment/: __init__.py  game_state.py  hand_ranker.py  poker_env.py  rules.py  simulator.py
src/models/: __init__.py  crf_loss.py  policy_net.py  utils.py  value_net.py
src/training/: __init__.py  evaluation.py  rl_trainer.py  self_play.py  supervised.py
src/utils/: __init__.py  config.py  constants.py  logger.py  metrics.py  poker_utils.py
tests/: __init_.py
tests/test_agents/: __init__.py  test_agents.py
tests/test_api/: __init__.py  test_predict.py
tests/test_data/: __init__.py  test_features.py  test_parser.py
tests/test_environment/: __init__.py  test_game_state.py  test_rules.py
tests/test_models/: __init__.py  test_policy_net.py
